# trash_daemon

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: main.rs  trash_folder.rs
shared/: Cargo.toml
shared/src/: config.rs  lib.rs
