[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared"}
serde = { workspace = true }
bincode = { workspace = true}
ctrlc = "3.4.2"
signal-hook = "0.3.17"
