[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }
serde-inline-default = "0.2.0"
xdg-basedir = "1.0.0"
